# switchboard-plug-keyboard

./: .travis.yml  CMakeLists.txt  README  README.md  keyboard.plug  keyboard.vala  makefile  meson.build
.github/workflows/: main.yml  release.yml
data/: Behavior.css  gresource.xml  io.elementary.switchboard-plug-keyboard.appdata.xml.in  io.elementary.switchboard.keyboard.appdata.xml.in  keyboard.gschema.xml  keyboard.metainfo.xml.in  layouts.txt  meson.build  options.txt  parse_layouts.pl  shortcuts.xml
debian/: changelog  control  copyright  rules
po/: CMakeLists.txt  POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  (+164 more)
po/extra/: POTFILES  aa.po  ab.po  ae.po  af.po  ak.po  am.po  an.po  ar.po  as.po  ast.po  av.po  ay.po  az.po  ba.po  be.po  bg.po  bh.po  bi.po  bm.po  bn.po  bo.po  br.po  bs.po  ca.po  ce.po  ch.po  ckb.po  co.po  cr.po  cs.po  cu.po  cv.po  cy.po  da.po  de.po  dv.po  dz.po  ee.po  el.po  (+160 more)
src/: AccountsServiceInterface.vala  CMakeLists.txt  Config.vala.in  Keyboard.vala  Plug.vala  keyboard.vala  meson.build  page.vala
src/Behavior/: Behavior.vala  Settings.vala
src/Dialogs/: AddLayoutDialog.vala  ConflictDialog.vala  InstallEngineDialog.vala  ProgressDialog.vala
src/InputMethod/: AddEnginesList.vala  InputMethod.vala  Utils.vala
src/InputMethod/Installer/: InstallList.vala  UbuntuInstaller.vala  aptd-client.vala
src/InputMethod/Widgets/: AddEngineDialog.vala  LanguagesRow.vala  ProgressDialog.vala
src/InputSources/: InputSource.vala  SourceSettings.vala  SourcesList.vala  XkbModifier.vala
src/Layout/: AdvancedSettingsGrid.vala  AdvancedSettingsPanel.vala  Display.vala  Handler.vala  Layout.vala  LayoutList.vala  LayoutSettings.vala  Settings.vala  XkbModifier.vala
src/Pages/: Behaviour.vala  Layout.vala  Shortcuts.vala  behaviour.vala  layout.vala  options.vala  shortcuts.vala
src/Pages/Behaviour/: settings.vala
src/Pages/Layout/: AddLayout.vala  LayoutHandler.vala  ListDisplay.vala  Settings.vala  add_layout.vala  display.vala  handler.vala  settings.vala  xkb_modifier.vala
src/Pages/Options/: option_handler.vala  option_settings.vala  option_tree.vala  section_display.vala  section_switcher.vala
src/Pages/Shortcuts/: conflict_dialog.vala  custom_shortcut_settings.vala  custom_tree.vala  display.vala  display_tree.vala  list.vala  section_switcher.vala  settings.vala  shortcut.vala  tree.vala
src/Shortcuts/: ApplicationShortcutSettings.vala  ConflictsManager.vala  CustomShortcutSettings.vala  List.vala  Settings.vala  Shortcut.vala  Shortcuts.vala  ShortcutsList.vala
src/Shortcuts/Backend/: Settings.vala  Shortcut.vala  ShortcutsList.vala
src/Shortcuts/Widgets/: CustomShortcutListBox.vala  ShortcutListBox.vala
src/Views/: AbstractPage.vala  Behavior.vala  InputMethod.vala  Layout.vala  Shortcuts.vala
src/Widgets/: ShortcutListBox.vala  try_entry.vala
src/Widgets/InputMethod/: AddEnginesPopover.vala  EnginesRow.vala  LanguagesRow.vala
src/Widgets/Layout/: AddLayoutPopover.vala  AdvancedSettingsGrid.vala  AdvancedSettingsPanel.vala  Display.vala
src/Widgets/Shortcuts/: ApplicationTree.vala  ConflictsManager.vala  CustomShortcutListBox.vala  CustomTree.vala  Display.vala  SectionSwitcher.vala  ShortcutDisplayInterface.vala  ShortcutListBox.vala  Tree.vala
src/Xkb/: Handler.vala  XkbModifier.vala
vapi/: libgnomekbd.vapi  libxklavier.vapi
